--- a/src/main/resources/templates/frontend/doctor.html
+++ b/src/main/resources/templates/frontend/doctor.html
@@ -57,7 +57,7 @@
         <div th:replace="/frontend/fragments/header.html"></div>
         <div class="offcanvas offcanvas-end " id="right-panel-toggle" tabindex="-1">
             <div class="offcanvas-header border-bottom px-5 mb-5 py-4">
-                <a class="navbar-brand m-0" href="./index.html" th:href="@{/index.html}">
+                <a class="navbar-brand m-0" href="./index.html" th:href="@{/templates/frontend/index.html}">
                    <span class="logo-normal">
                       <img alt="logo" class="img-fluid"
                            loading="lazy" src="./assets/images/logo/logo.png"
