--- a/src/main/resources/templates/frontend/checkout.html
+++ b/src/main/resources/templates/frontend/checkout.html
@@ -1443,7 +1443,7 @@
                             </p>
                             <div class="button-primary">
                                 <div class="iq-btn-container">
-                                    <a class="iq-button text-capitalize" href="/payment/index">
+                                    <a class="iq-button text-capitalize" href="/payment/form">
                                         <span class="iq-btn-text-holder position-relative">Place Order</span>
                                         <span class="iq-btn-icon-holder">
                               <svg fill="none" height="10" viewBox="0 0 8 8" width="10"
