--- a/src/main/resources/templates/dashboard/payment-list.html
+++ b/src/main/resources/templates/dashboard/payment-list.html
@@ -317,7 +317,7 @@
                 </li>
                 <li class="nav-item">
                     <a aria-current="page" class="nav-link active"
-                       href="./payment-list.html" th:href="@{/dashboard/payment-list.html}">
+                       th:href="@{/payment/list/page/0}">
                         <i class="icon" data-bs-placement="right" data-bs-toggle="tooltip" title="Payment">
                             <svg class="icon-20" fill="none" viewBox="0 0 24 24" width="20"
                                  xmlns="http://www.w3.org/2000/svg">
