--- a/src/main/resources/templates/frontend/success.html
+++ b/src/main/resources/templates/frontend/success.html
@@ -24,7 +24,7 @@
                                                                              th:text="${vnpayTransactionNo}"></span></p>
     <!-- Cập nhật href để trỏ đến FrontendController -->
     <a class="inline-block bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700 transition duration-300"
-       href="/payment/form">
+       href="/api/payment/form">
         Quay lại trang nạp tiền
     </a>
 </div>
